Fixed Sidebar Alignment

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,29 +1,24 @@
 @font-face {
-    font-family: "Light";   
-    src: local("ProximaNovaThin"),
-      url("./fonts/ProximaNovaThin.otf") format("opentype");
-  }
-  @font-face {
-    font-family: "Regular";   
-    src: local("ProximaNovaRegular"),
-      url("./fonts/ProximaNovaRegular.otf") format("opentype");
-  }
-  @font-face {
-    font-family: "Black";   
-    src: local("ProximaNovaBlack"),
-      url("./fonts/ProximaNovaBlack.otf") format("opentype");
-  }
-  @font-face {
-    font-family: "Bold";   
-    src: local("ProximaNovaBold"),
-      url("./fonts/ProximaNovaBold.otf") format("opentype");
-  }
+    font-family: "Light";
+    src: local("ProximaNovaThin"), url("./fonts/ProximaNovaThin.otf") format("opentype");
+}
+@font-face {
+    font-family: "Regular";
+    src: local("ProximaNovaRegular"), url("./fonts/ProximaNovaRegular.otf") format("opentype");
+}
+@font-face {
+    font-family: "Black";
+    src: local("ProximaNovaBlack"), url("./fonts/ProximaNovaBlack.otf") format("opentype");
+}
+@font-face {
+    font-family: "Bold";
+    src: local("ProximaNovaBold"), url("./fonts/ProximaNovaBold.otf") format("opentype");
+}
 
-  *{
+* {
     margin: 0;
     padding: 0;
     list-style: none;
     box-sizing: border-box;
-    font-family: 'Regular';
-
-  }
+    font-family: "Regular";
+}
